--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lab/ui": "workspace:*",
+    "@radix-ui/react-icons": "^1.3.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
