chore: lint and type fixes

--- a/applications/web/.oxlintrc.json
+++ b/applications/web/.oxlintrc.json
@@ -39,7 +39,9 @@
     }
   },
   "env": {
-    "builtin": true
+    "builtin": true,
+    "browser": true,
+    "node": true
   },
   "globals": {},
   "ignorePatterns": []
