--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "types": "tsc --noEmit",
     "lint": "oxlint",
-    "format": "oxfmt"
+    "format": "oxfmt ."
   },
   "dependencies": {
     "@lab/multiplayer-channels": "workspace:*",
