--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "lab",
-  "type": "module",
   "private": true,
-  "packageManager": "bun@1.3.7",
-  "devDependencies": {
-    "knip": "5.82.1",
-    "rimraf": "^6.1.2",
-    "turbo": "2.7.6"
+  "workspaces": {
+    "packages": [
+      "applications/*",
+      "packages/*",
+      "packages/multiplayer/*",
+      "services/*"
+    ]
   },
+  "type": "module",
   "scripts": {
     "clean": "rimraf --glob **/.turbo/",
     "dev": "turbo run dev",
@@ -18,12 +20,10 @@
     "test": "turbo run test",
     "unused": "knip"
   },
-  "workspaces": {
-    "packages": [
-      "applications/*",
-      "packages/*",
-      "packages/multiplayer/*",
-      "services/*"
-    ]
-  }
+  "devDependencies": {
+    "knip": "5.82.1",
+    "rimraf": "^6.1.2",
+    "turbo": "2.7.6"
+  },
+  "packageManager": "bun@1.3.7"
 }
