--- a/packages/multiplayer-channels/package.json
+++ b/packages/multiplayer-channels/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "typesVersions": {
     "*": {
-      "*": ["src/*"]
+      "*": [
+        "src/*"
+      ]
     }
   },
   "exports": {
