--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -14,6 +14,7 @@
     "format": "oxfmt ."
   },
   "dependencies": {
+    "@opencode-ai/sdk": "^1.1.41",
     "zod": "^3.24.2"
   },
   "devDependencies": {
