--- a/compose.yaml
+++ b/compose.yaml
@@ -25,7 +25,16 @@ services:
   opencode:
     image: ghcr.io/anomalyco/opencode
     container_name: lab-opencode
-    command: ["serve", "--hostname", "0.0.0.0", "--port", "3000"]
+    command:
+      [
+        "serve",
+        "--hostname",
+        "0.0.0.0",
+        "--port",
+        "3000",
+        "--print-logs",
+        "true",
+      ]
     ports:
       - "3002:3000"
     volumes:
