--- a/compose.yaml
+++ b/compose.yaml
@@ -98,6 +98,7 @@ services:
       AGENT_BROWSER_SESSION: default
       AGENT_BROWSER_STREAM_PORT: "9223"
       BROWSER_API_PORT: "80"
+      DATABASE_URL: "postgresql://lab:lab@postgres:5432/lab"
     ports:
       - "9223-9300:9223-9300"
 
