--- a/compose.yaml
+++ b/compose.yaml
@@ -47,9 +47,10 @@ services:
         "--hostname",
         "0.0.0.0",
         "--port",
-        "--log-level",
-        "INFO",
         "3000",
+        "--log-level",
+        "DEBUG",
+        "--print-logs",
       ]
     ports:
       - "3002:3000"
