--- a/services/mcp/Dockerfile
+++ b/services/mcp/Dockerfile
@@ -20,6 +20,7 @@ RUN bun install --ignore-scripts
 COPY --from=build /app/services/mcp/src ./services/mcp/src
 COPY --from=build /app/packages/sandbox-sdk/src ./packages/sandbox-sdk/src
 COPY --from=build /app/packages/sandbox-docker/src ./packages/sandbox-docker/src
+COPY --from=build /app/packages/browser-protocol/src ./packages/browser-protocol/src
 
 ENV NODE_ENV=production
 ENV MCP_PORT=3000
