--- a/services/api/package.json
+++ b/services/api/package.json
@@ -16,6 +16,7 @@
     "@lab/multiplayer-sdk": "workspace:*",
     "@lab/multiplayer-server": "workspace:*",
     "@lab/sandbox-docker": "workspace:*",
+    "@lab/subagents": "workspace:*",
     "@opencode-ai/sdk": "^1.1.41",
     "ai": "^6.0.67",
     "drizzle-orm": "^0.38.0",
