--- a/compose.yaml
+++ b/compose.yaml
@@ -125,10 +125,19 @@ services:
       GITHUB_CLIENT_SECRET: $GITHUB_CLIENT_SECRET
       GITHUB_CALLBACK_URL: $GITHUB_CALLBACK_URL
       FRONTEND_URL: $FRONTEND_URL
+      RUSTFS_ENDPOINT: $RUSTFS_ENDPOINT
+      RUSTFS_ACCESS_KEY: $RUSTFS_ACCESS_KEY
+      RUSTFS_SECRET_KEY: $RUSTFS_SECRET_KEY
+      RUSTFS_BUCKET: $RUSTFS_BUCKET
+      RUSTFS_PUBLIC_URL: $RUSTFS_PUBLIC_URL
+      IMAGE_ANALYZER_PROVIDER: $IMAGE_ANALYZER_PROVIDER
+      IMAGE_ANALYZER_MODEL: $IMAGE_ANALYZER_MODEL
+      IMAGE_ANALYZER_API_KEY: $IMAGE_ANALYZER_API_KEY
     depends_on:
       - postgres
       - opencode
       - browser
+      - rustfs
 
   browser:
     build:
