--- a/services/api/package.json
+++ b/services/api/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "bun src/index.ts",
+    "start:pretty": "bun src/index.ts | pino-pretty",
     "types": "tsc --noEmit",
     "lint": "oxlint",
     "format": "oxfmt ."
